--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "lodash.debounce": "^4.0.8",
+    "toastr": "^2.1.4",
+    "tui-pagination": "^3.4.0"
   }
 }
